--- a/MarvelApp/MarvelApp/Detail/Character Detail/Header/TableView Cell/HeaderTableViewCell.xib
+++ b/MarvelApp/MarvelApp/Detail/Character Detail/Header/TableView Cell/HeaderTableViewCell.xib
@@ -3,6 +3,7 @@
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -115,6 +116,20 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                     </collectionView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xBw-uJ-xx0">
+                        <rect key="frame" x="20" y="40" width="25" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="25" id="wKp-2o-4eY"/>
+                            <constraint firstAttribute="height" constant="30" id="ybI-90-hL1"/>
+                        </constraints>
+                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <state key="normal">
+                            <imageReference key="image" image="chevron.backward" catalog="system" symbolScale="large"/>
+                        </state>
+                        <connections>
+                            <action selector="tappedBackButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="P2q-vq-USK"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="p15-i1-lgg" firstAttribute="leading" secondItem="2Ux-WJ-ItJ" secondAttribute="leading" id="0M2-9f-yje"/>
@@ -122,6 +137,7 @@
                     <constraint firstAttribute="trailing" secondItem="JE9-NX-mKH" secondAttribute="trailing" constant="40" id="8St-vE-gux"/>
                     <constraint firstItem="aN3-7F-hbP" firstAttribute="top" secondItem="iqP-V8-tZj" secondAttribute="bottom" constant="18.329999999999998" id="BFU-CW-qXw"/>
                     <constraint firstItem="aN3-7F-hbP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Cpp-xN-VxC"/>
+                    <constraint firstItem="xBw-uJ-xx0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="40" id="H7E-5f-6jv"/>
                     <constraint firstItem="p15-i1-lgg" firstAttribute="top" secondItem="2Ux-WJ-ItJ" secondAttribute="bottom" constant="-45" id="IIJ-3I-vEu"/>
                     <constraint firstItem="2Ux-WJ-ItJ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="SL7-Sb-YTv"/>
                     <constraint firstAttribute="bottom" secondItem="aN3-7F-hbP" secondAttribute="bottom" constant="15" id="Uhy-92-7V9"/>
@@ -132,6 +148,7 @@
                     <constraint firstItem="iqP-V8-tZj" firstAttribute="trailing" secondItem="JE9-NX-mKH" secondAttribute="trailing" id="h86-mJ-qEj"/>
                     <constraint firstItem="JE9-NX-mKH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="40" id="iLM-3u-ygo"/>
                     <constraint firstAttribute="trailing" secondItem="2Ux-WJ-ItJ" secondAttribute="trailing" id="iMq-9n-VtQ"/>
+                    <constraint firstItem="xBw-uJ-xx0" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" symbolic="YES" id="lKW-YX-sK0"/>
                     <constraint firstItem="2Ux-WJ-ItJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="pkr-9I-ty3"/>
                     <constraint firstItem="JE9-NX-mKH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="210" id="veE-op-Tlf"/>
                 </constraints>
@@ -139,6 +156,7 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
+                <outlet property="backButton" destination="xBw-uJ-xx0" id="Q0P-kf-L3m"/>
                 <outlet property="characterImage" destination="2Ux-WJ-ItJ" id="YeA-46-5WB"/>
                 <outlet property="collectionController" destination="aN3-7F-hbP" id="7YZ-IC-2kr"/>
                 <outlet property="descriptionLabel" destination="iqP-V8-tZj" id="B02-uX-dtd"/>
@@ -155,6 +173,7 @@
     <resources>
         <image name="Icon material-favorite" width="16" height="14"/>
         <image name="Imagem 55" width="171.33332824707031" height="119"/>
+        <image name="chevron.backward" catalog="system" width="96" height="128"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
