--- a/MarvelApp/MarvelApp/Detail/Comics Detail/ComicsDetail.storyboard
+++ b/MarvelApp/MarvelApp/Detail/Comics Detail/ComicsDetail.storyboard
@@ -30,6 +30,9 @@
                             <constraint firstItem="odR-x9-kmG" firstAttribute="leading" secondItem="n0B-eY-SDB" secondAttribute="leading" id="pzr-Y9-NnF"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableViewController" destination="odR-x9-kmG" id="cMP-5P-be2"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fXJ-EL-wme" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
