--- a/MarvelApp/MarvelApp/Detail/Comics Detail/Header/TableView/HeaderComicsTableViewCell.xib
+++ b/MarvelApp/MarvelApp/Detail/Comics Detail/Header/TableView/HeaderComicsTableViewCell.xib
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -10,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HeaderComicsTableViewCell" rowHeight="726" id="KGk-i7-Jjw" customClass="HeaderComicsTableViewCell" customModule="MarvelApp" customModuleProvider="target">
+        <tableViewCell userInteractionEnabled="NO" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HeaderComicsTableViewCell" rowHeight="726" id="KGk-i7-Jjw" customClass="HeaderComicsTableViewCell" customModule="MarvelApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="726"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -23,6 +24,17 @@
                             <constraint firstAttribute="height" constant="246" id="qRl-cZ-1Z7"/>
                         </constraints>
                     </imageView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KDf-Kb-5hd">
+                        <rect key="frame" x="10" y="40" width="25" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="25" id="7vl-9l-MSJ"/>
+                            <constraint firstAttribute="height" constant="30" id="xLO-Fh-UaE"/>
+                        </constraints>
+                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <state key="normal">
+                            <imageReference key="image" image="chevron.backward" catalog="system" symbolScale="large"/>
+                        </state>
+                    </button>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Os2-8N-1i8">
                         <rect key="frame" x="0.0" y="201" width="420" height="525"/>
                         <subviews>
@@ -166,9 +178,21 @@
                                     <constraint firstAttribute="height" constant="299" id="iw6-xa-PhG"/>
                                 </constraints>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UIE-2P-Pe3">
+                                <rect key="frame" x="218" y="483" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="iqG-9s-szU"/>
+                                    <constraint firstAttribute="width" constant="30" id="mqK-Kx-Yn6"/>
+                                </constraints>
+                                <color key="tintColor" red="0.54902726410000002" green="0.54900586610000002" blue="0.54902035000000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <state key="normal" image="magnifyingglass" catalog="system">
+                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="UIE-2P-Pe3" firstAttribute="leading" secondItem="fq8-kV-Gy9" secondAttribute="trailing" constant="-38" id="4eC-FO-vef"/>
                             <constraint firstItem="GfG-RZ-8Mr" firstAttribute="top" secondItem="vRN-G9-9ky" secondAttribute="bottom" constant="10" id="9Xq-cD-44I"/>
                             <constraint firstAttribute="trailing" secondItem="vRN-G9-9ky" secondAttribute="trailing" constant="134" id="9l5-Yj-Bou"/>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="525" id="Bgk-2S-J2o"/>
@@ -181,6 +205,7 @@
                             <constraint firstItem="vRN-G9-9ky" firstAttribute="leading" secondItem="Os2-8N-1i8" secondAttribute="leading" constant="40" id="pji-0f-JiK"/>
                             <constraint firstItem="vRN-G9-9ky" firstAttribute="top" secondItem="Os2-8N-1i8" secondAttribute="top" constant="25" id="qUs-5w-Bz2"/>
                             <constraint firstAttribute="trailing" secondItem="fq8-kV-Gy9" secondAttribute="trailing" constant="164" id="vUz-of-x9T"/>
+                            <constraint firstItem="UIE-2P-Pe3" firstAttribute="top" secondItem="fq8-kV-Gy9" secondAttribute="bottom" constant="-36" id="vvF-0r-qiM"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -188,8 +213,10 @@
                     <constraint firstAttribute="bottom" secondItem="Os2-8N-1i8" secondAttribute="bottom" id="FbC-CI-ZED"/>
                     <constraint firstItem="Os2-8N-1i8" firstAttribute="top" secondItem="LFd-rH-DJC" secondAttribute="bottom" constant="-45" id="SIN-3u-ugU"/>
                     <constraint firstItem="LFd-rH-DJC" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="TTy-ck-A1L"/>
+                    <constraint firstItem="KDf-Kb-5hd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="40" id="Tzd-KY-hG3"/>
                     <constraint firstAttribute="trailing" secondItem="Os2-8N-1i8" secondAttribute="trailing" constant="-100" id="U9l-he-AyW"/>
                     <constraint firstItem="Os2-8N-1i8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="fqd-Vh-39A"/>
+                    <constraint firstItem="KDf-Kb-5hd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="glz-2p-JIq"/>
                     <constraint firstItem="LFd-rH-DJC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="uJb-lY-INz"/>
                     <constraint firstAttribute="trailing" secondItem="LFd-rH-DJC" secondAttribute="trailing" constant="-1" id="zxw-ow-uOg"/>
                 </constraints>
@@ -205,6 +232,8 @@
         <image name="Icon material-favorite" width="16" height="14"/>
         <image name="Imagem 26" width="60.5" height="69"/>
         <image name="Imagem 28" width="65" height="97"/>
+        <image name="chevron.backward" catalog="system" width="96" height="128"/>
+        <image name="magnifyingglass" catalog="system" width="128" height="115"/>
         <systemColor name="systemBlueColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
