--- a/MarvelApp/MarvelApp/Profile/Config Profile/ConfigProfile.storyboard
+++ b/MarvelApp/MarvelApp/Profile/Config Profile/ConfigProfile.storyboard
@@ -59,15 +59,6 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Log out" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3lc-XW-wnd">
-                                <rect key="frame" x="20" y="177" width="62" height="20"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="62" id="PHG-de-whO"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YRk-7y-eYP">
                                 <rect key="frame" x="347" y="131.5" width="51" height="31"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -84,8 +75,19 @@
                                     <imageReference key="image" image="chevron.right" catalog="system" symbolScale="large"/>
                                 </state>
                                 <connections>
-                                    <action selector="AccountSettingButton:" destination="7jf-Zw-THm" eventType="touchUpInside" id="C1M-uL-RAQ"/>
+                                    <action selector="accountSettingButton:" destination="7jf-Zw-THm" eventType="touchUpInside" id="ps7-Yw-7Kf"/>
                                     <segue destination="Wts-MP-3bb" kind="show" identifier="AccountSettingsSegue" id="fZn-Kf-oP8"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dWa-hT-Ewh">
+                                <rect key="frame" x="20" y="175" width="62" height="32"/>
+                                <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="17"/>
+                                <state key="normal" title="Log out">
+                                    <color key="titleColor" red="0.062745098040000002" green="0.094117647060000004" blue="0.12549019610000001" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="logoutButton:" destination="7jf-Zw-THm" eventType="touchUpInside" id="5hj-a8-m3r"/>
+                                    <segue destination="kzO-jO-3q9" kind="show" identifier="Login" id="Kkc-aF-dJm"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -93,7 +95,6 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="JCr-MI-gLL" firstAttribute="leading" secondItem="CQH-96-j4K" secondAttribute="leading" constant="20" id="4j0-af-YOn"/>
-                            <constraint firstItem="3lc-XW-wnd" firstAttribute="leading" secondItem="CQH-96-j4K" secondAttribute="leading" constant="20" id="59y-PK-h8b"/>
                             <constraint firstItem="YRk-7y-eYP" firstAttribute="centerY" secondItem="JCr-MI-gLL" secondAttribute="centerY" id="6Sl-GU-rw8"/>
                             <constraint firstItem="Gpy-fh-6jp" firstAttribute="top" secondItem="Yxu-e0-Bv4" secondAttribute="bottom" constant="6" id="7B4-O4-43O"/>
                             <constraint firstItem="eMk-60-Ktb" firstAttribute="centerY" secondItem="Gpy-fh-6jp" secondAttribute="centerY" id="Ldr-6T-M5L"/>
@@ -102,10 +103,12 @@
                             <constraint firstItem="CQH-96-j4K" firstAttribute="trailing" secondItem="YRk-7y-eYP" secondAttribute="trailing" constant="18" id="VP1-Gu-MAr"/>
                             <constraint firstItem="Yxu-e0-Bv4" firstAttribute="leading" secondItem="CQH-96-j4K" secondAttribute="leading" constant="20" id="WP6-Ip-EFU"/>
                             <constraint firstItem="Yxu-e0-Bv4" firstAttribute="centerY" secondItem="mLM-ry-VLu" secondAttribute="centerY" id="Ynq-PY-lgm"/>
-                            <constraint firstItem="3lc-XW-wnd" firstAttribute="top" secondItem="JCr-MI-gLL" secondAttribute="bottom" constant="20" id="bb6-6v-SHV"/>
                             <constraint firstItem="mLM-ry-VLu" firstAttribute="top" secondItem="CQH-96-j4K" secondAttribute="top" constant="12" id="kRK-7L-rjv"/>
+                            <constraint firstItem="dWa-hT-Ewh" firstAttribute="leading" secondItem="CQH-96-j4K" secondAttribute="leading" constant="20" id="m7h-p3-fM9"/>
                             <constraint firstItem="JCr-MI-gLL" firstAttribute="top" secondItem="Gpy-fh-6jp" secondAttribute="bottom" constant="20" id="te1-rZ-bac"/>
+                            <constraint firstItem="CQH-96-j4K" firstAttribute="trailing" secondItem="dWa-hT-Ewh" secondAttribute="trailing" constant="332" id="v5I-72-u8o"/>
                             <constraint firstItem="CQH-96-j4K" firstAttribute="trailing" secondItem="eMk-60-Ktb" secondAttribute="trailing" constant="31" id="wWf-gA-aXW"/>
+                            <constraint firstItem="dWa-hT-Ewh" firstAttribute="top" secondItem="JCr-MI-gLL" secondAttribute="bottom" constant="18" id="y9a-YR-AXF"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="nCr-ik-6Vh"/>
@@ -123,6 +126,16 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YRR-hb-M5q" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1249" y="-18"/>
+        </scene>
+        <!--Main-->
+        <scene sceneID="TJG-fP-DZ9">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Main" id="kzO-jO-3q9" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="rY0-Bk-p4v"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="id4-nG-Ch2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1304" y="265"/>
         </scene>
     </scenes>
     <resources>
